--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>  </html>
 
 <!--please use CSS style tags here - this is a comment -->
-<body>  </body>
+<HEAD>
+    <style>
+       H1 {color:blue; font-size: 300%;} 
+
+    </style>
+</HEAD>
+<body>  
+    <H1> This is my header </H1>
+</body>
