--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <HEAD>
     <style>
        H1 {color:blue; font-size: 300%;} 
-
+       H2 {color:green; font-size: 250%;} <!-- added at remote -->
     </style>
 </HEAD>
 <body>  
